fix: replication group index not set correctly in podStatuses